src/grammar/doxygenParser.ts
/*
 * Copyright (C) 2025 Darshan(@thisisthedarshan)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
// Generated from ./src/grammar/antlr/doxygenParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import doxygenParserListener from "./doxygenParserListener.js";
import doxygenParserVisitor from "./doxygenParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class doxygenParser extends Parser {
	public static readonly TOKEN_DOC_START = 1;
	public static readonly TOKEN_DOC_END = 2;
	public static readonly TOKEN_BRIEF_MARKER = 3;
	public static readonly TOKEN_PARAM_MARKER = 4;
	public static readonly TOKEN_RETURN_MARKER = 5;
	public static readonly TOKEN_RETURNS_MARKER = 6;
	public static readonly TOKEN_DEPRECATED_MARKER = 7;
	public static readonly TOKEN_AUTHOR_MARKER = 8;
	public static readonly TOKEN_DATE_MARKER = 9;
	public static readonly TOKEN_VERSION_MARKER = 10;
	public static readonly TOKEN_SEE_MARKER = 11;
	public static readonly TOKEN_ATTENTION_MARKER = 12;
	public static readonly TOKEN_FILE_MARKER = 13;
	public static readonly TOKEN_TODO_MARKER = 14;
	public static readonly TOKEN_EXAMPLE_MARKER = 15;
	public static readonly TOKEN_WORD = 16;
	public static readonly TOKEN_DIGIT = 17;
	public static readonly TOKEN_DATE = 18;
	public static readonly TOKEN_NEWLINE = 19;
	public static readonly TOKEN_WHITESPACE = 20;
	public static readonly TOKEN_DOT = 21;
	public static readonly TOKEN_FSLASH = 22;
	public static readonly TOKEN_UNDERSCORE = 23;
	public static readonly SKIP_WHITESPACE = 24;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_documentation_comment = 0;
	public static readonly RULE_doc_content = 1;
	public static readonly RULE_brief_command = 2;
	public static readonly RULE_param_command = 3;
	public static readonly RULE_return_command = 4;
	public static readonly RULE_deprecated_command = 5;
	public static readonly RULE_author_command = 6;
	public static readonly RULE_date_command = 7;
	public static readonly RULE_version_command = 8;
	public static readonly RULE_see_command = 9;
	public static readonly RULE_attention_command = 10;
	public static readonly RULE_file_command = 11;
	public static readonly RULE_todo_command = 12;
	public static readonly RULE_example_command = 13;
	public static readonly RULE_brief_text = 14;
	public static readonly RULE_param_identifier = 15;
	public static readonly RULE_param_description = 16;
	public static readonly RULE_return_description = 17;
	public static readonly RULE_deprecated_description = 18;
	public static readonly RULE_author_name = 19;
	public static readonly RULE_date_value = 20;
	public static readonly RULE_version_value = 21;
	public static readonly RULE_see_link = 22;
	public static readonly RULE_see_description = 23;
	public static readonly RULE_attention_description = 24;
	public static readonly RULE_file_path = 25;
	public static readonly RULE_todo_description = 26;
	public static readonly RULE_example_code = 27;
	public static readonly literalNames: (string | null)[] = [ null, "'/**'", 
                                                            "'*/'", null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, "'.'", 
                                                            "'/'", "'_'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "TOKEN_DOC_START", 
                                                             "TOKEN_DOC_END", 
                                                             "TOKEN_BRIEF_MARKER", 
                                                             "TOKEN_PARAM_MARKER", 
                                                             "TOKEN_RETURN_MARKER", 
                                                             "TOKEN_RETURNS_MARKER", 
                                                             "TOKEN_DEPRECATED_MARKER", 
                                                             "TOKEN_AUTHOR_MARKER", 
                                                             "TOKEN_DATE_MARKER", 
                                                             "TOKEN_VERSION_MARKER", 
                                                             "TOKEN_SEE_MARKER", 
                                                             "TOKEN_ATTENTION_MARKER", 
                                                             "TOKEN_FILE_MARKER", 
                                                             "TOKEN_TODO_MARKER", 
                                                             "TOKEN_EXAMPLE_MARKER", 
                                                             "TOKEN_WORD", 
                                                             "TOKEN_DIGIT", 
                                                             "TOKEN_DATE", 
                                                             "TOKEN_NEWLINE", 
                                                             "TOKEN_WHITESPACE", 
                                                             "TOKEN_DOT", 
                                                             "TOKEN_FSLASH", 
                                                             "TOKEN_UNDERSCORE", 
                                                             "SKIP_WHITESPACE" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"documentation_comment", "doc_content", "brief_command", "param_command", 
		"return_command", "deprecated_command", "author_command", "date_command", 
		"version_command", "see_command", "attention_command", "file_command", 
		"todo_command", "example_command", "brief_text", "param_identifier", "param_description", 
		"return_description", "deprecated_description", "author_name", "date_value", 
		"version_value", "see_link", "see_description", "attention_description", 
		"file_path", "todo_description", "example_code",
	];
	public get grammarFileName(): string { return "doxygenParser.g4"; }
	public get literalNames(): (string | null)[] { return doxygenParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return doxygenParser.symbolicNames; }
	public get ruleNames(): string[] { return doxygenParser.ruleNames; }
	public get serializedATN(): number[] { return doxygenParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, doxygenParser._ATN, doxygenParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public documentation_comment(): Documentation_commentContext {
		let localctx: Documentation_commentContext = new Documentation_commentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, doxygenParser.RULE_documentation_comment);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 56;
			this.match(doxygenParser.TOKEN_DOC_START);
			this.state = 60;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 65528) !== 0)) {
				{
				{
				this.state = 57;
				this.doc_content();
				}
				}
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 63;
			this.match(doxygenParser.TOKEN_DOC_END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public doc_content(): Doc_contentContext {
		let localctx: Doc_contentContext = new Doc_contentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, doxygenParser.RULE_doc_content);
		try {
			this.state = 77;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 3:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 65;
				this.brief_command();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 66;
				this.param_command();
				}
				break;
			case 5:
			case 6:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 67;
				this.return_command();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 68;
				this.deprecated_command();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 69;
				this.author_command();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 70;
				this.date_command();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 71;
				this.version_command();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 72;
				this.see_command();
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 73;
				this.attention_command();
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 74;
				this.file_command();
				}
				break;
			case 14:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 75;
				this.todo_command();
				}
				break;
			case 15:
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 76;
				this.example_command();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public brief_command(): Brief_commandContext {
		let localctx: Brief_commandContext = new Brief_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, doxygenParser.RULE_brief_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 79;
			this.match(doxygenParser.TOKEN_BRIEF_MARKER);
			this.state = 80;
			this.brief_text();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public param_command(): Param_commandContext {
		let localctx: Param_commandContext = new Param_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, doxygenParser.RULE_param_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 82;
			this.match(doxygenParser.TOKEN_PARAM_MARKER);
			this.state = 83;
			this.param_identifier();
			this.state = 84;
			this.param_description();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public return_command(): Return_commandContext {
		let localctx: Return_commandContext = new Return_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, doxygenParser.RULE_return_command);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			_la = this._input.LA(1);
			if(!(_la===5 || _la===6)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 87;
			this.return_description();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public deprecated_command(): Deprecated_commandContext {
		let localctx: Deprecated_commandContext = new Deprecated_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, doxygenParser.RULE_deprecated_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 89;
			this.match(doxygenParser.TOKEN_DEPRECATED_MARKER);
			this.state = 90;
			this.deprecated_description();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public author_command(): Author_commandContext {
		let localctx: Author_commandContext = new Author_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, doxygenParser.RULE_author_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 92;
			this.match(doxygenParser.TOKEN_AUTHOR_MARKER);
			this.state = 93;
			this.author_name();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public date_command(): Date_commandContext {
		let localctx: Date_commandContext = new Date_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, doxygenParser.RULE_date_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			this.match(doxygenParser.TOKEN_DATE_MARKER);
			this.state = 96;
			this.date_value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public version_command(): Version_commandContext {
		let localctx: Version_commandContext = new Version_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, doxygenParser.RULE_version_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 98;
			this.match(doxygenParser.TOKEN_VERSION_MARKER);
			this.state = 99;
			this.version_value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public see_command(): See_commandContext {
		let localctx: See_commandContext = new See_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, doxygenParser.RULE_see_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 101;
			this.match(doxygenParser.TOKEN_SEE_MARKER);
			this.state = 102;
			this.see_link();
			this.state = 104;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				{
				this.state = 103;
				this.see_description();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attention_command(): Attention_commandContext {
		let localctx: Attention_commandContext = new Attention_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, doxygenParser.RULE_attention_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 106;
			this.match(doxygenParser.TOKEN_ATTENTION_MARKER);
			this.state = 107;
			this.attention_description();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public file_command(): File_commandContext {
		let localctx: File_commandContext = new File_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, doxygenParser.RULE_file_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 109;
			this.match(doxygenParser.TOKEN_FILE_MARKER);
			this.state = 110;
			this.file_path();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public todo_command(): Todo_commandContext {
		let localctx: Todo_commandContext = new Todo_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, doxygenParser.RULE_todo_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 112;
			this.match(doxygenParser.TOKEN_TODO_MARKER);
			this.state = 113;
			this.todo_description();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public example_command(): Example_commandContext {
		let localctx: Example_commandContext = new Example_commandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, doxygenParser.RULE_example_command);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 115;
			this.match(doxygenParser.TOKEN_EXAMPLE_MARKER);
			this.state = 116;
			this.example_code();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public brief_text(): Brief_textContext {
		let localctx: Brief_textContext = new Brief_textContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, doxygenParser.RULE_brief_text);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 119;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 118;
					_la = this._input.LA(1);
					if(_la<=0 || (((_la) & ~0x1F) === 0 && ((1 << _la) & 65524) !== 0)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 121;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public param_identifier(): Param_identifierContext {
		let localctx: Param_identifierContext = new Param_identifierContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, doxygenParser.RULE_param_identifier);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 123;
			this.match(doxygenParser.TOKEN_WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public param_description(): Param_descriptionContext {
		let localctx: Param_descriptionContext = new Param_descriptionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, doxygenParser.RULE_param_description);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 132;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 128;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
					while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
						if (_alt === 1) {
							{
							{
							this.state = 125;
							this.match(doxygenParser.TOKEN_NEWLINE);
							}
							}
						}
						this.state = 130;
						this._errHandler.sync(this);
						_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
					}
					this.state = 131;
					_la = this._input.LA(1);
					if(_la<=0 || _la===2 || _la===4) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 134;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public return_description(): Return_descriptionContext {
		let localctx: Return_descriptionContext = new Return_descriptionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, doxygenParser.RULE_return_description);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 143;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 139;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
					while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
						if (_alt === 1) {
							{
							{
							this.state = 136;
							this.match(doxygenParser.TOKEN_NEWLINE);
							}
							}
						}
						this.state = 141;
						this._errHandler.sync(this);
						_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
					}
					this.state = 142;
					_la = this._input.LA(1);
					if(_la<=0 || (((_la) & ~0x1F) === 0 && ((1 << _la) & 388) !== 0)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 145;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public deprecated_description(): Deprecated_descriptionContext {
		let localctx: Deprecated_descriptionContext = new Deprecated_descriptionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, doxygenParser.RULE_deprecated_description);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 154;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 150;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
					while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
						if (_alt === 1) {
							{
							{
							this.state = 147;
							this.match(doxygenParser.TOKEN_NEWLINE);
							}
							}
						}
						this.state = 152;
						this._errHandler.sync(this);
						_alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
					}
					this.state = 153;
					_la = this._input.LA(1);
					if(_la<=0 || _la===2 || _la===8) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 156;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public author_name(): Author_nameContext {
		let localctx: Author_nameContext = new Author_nameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, doxygenParser.RULE_author_name);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 159;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 158;
				_la = this._input.LA(1);
				if(!(_la===16 || _la===20)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				}
				}
				this.state = 161;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===16 || _la===20);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public date_value(): Date_valueContext {
		let localctx: Date_valueContext = new Date_valueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, doxygenParser.RULE_date_value);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 163;
			this.match(doxygenParser.TOKEN_DATE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public version_value(): Version_valueContext {
		let localctx: Version_valueContext = new Version_valueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 42, doxygenParser.RULE_version_value);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 165;
				_la = this._input.LA(1);
				if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 2293760) !== 0))) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				}
				}
				this.state = 168;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2293760) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public see_link(): See_linkContext {
		let localctx: See_linkContext = new See_linkContext(this, this._ctx, this.state);
		this.enterRule(localctx, 44, doxygenParser.RULE_see_link);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 170;
			this.match(doxygenParser.TOKEN_WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
